# skillbox-study

14_6_3_IP_Correct/: CMakeLists.txt  main.cpp
14_6_4_Calc_Numbers/: CMakeLists.txt  main.cpp
14_6_4_Comprasiom_numbers/: CMakeLists.txt  main.cpp
Exercise_13_Vector/: CMakeLists.txt  main.cpp
Experiment/: CMakeLists.txt  main.cpp
Git/: .gitignore  CMakeLists.txt  main.cpp
Lesson34_QT_developing/: CMakeLists.txt  main.cpp
Lesson_34_Qt_developing/: CMakeLists.txt  main.cpp
Lessons32_JSON/: CMakeLists.txt  main.cpp  record.pb.cc  record.pb.h  record.proto
Lessons_33/: CMakeLists.txt  main.cpp
Lessons_36/: CMakeLists.txt  main.cpp
Mango/: CMakeLists.txt  main.cpp
Qt_/: CMakeLists.txt
Qt_tutorial/: CMakeLists.txt  main.cpp
SeaBattle/: CMakeLists.txt  main.cpp
Task 14_6_1/: CMakeLists.txt  main.cpp
Task_12_6_2_Average_Floor/: CMakeLists.txt  main.cpp
Task_12_6_2_Battleship/: CMakeLists.txt  main.cpp
Task_12_6_3_Level_Self-isolation/: CMakeLists.txt  main.cpp
Task_12_6_4_Radio/: CMakeLists.txt  main.cpp
Task_13_6_1/: CMakeLists.txt  main.cpp
Task_14_6_1/: main.cpp
Task_14_6_2/: CMakeLists.txt  main.cpp
Task_14_6_2_Email_correct/: CMakeLists.txt  main.cpp
Task_14_6_5_X_&_0/: CMakeLists.txt  main.cpp
Task_15_6_1/: CMakeLists.txt  main.cpp
Task_15_6_2/: CMakeLists.txt  main.cpp
Task_15_6_3/: CMakeLists.txt  main.cpp
Task_15_6_4/: CMakeLists.txt  main.cpp
Task_15_6_4_v2/: CMakeLists.txt  main.cpp
Task_16_4_1/: CMakeLists.txt  main.cpp
Task_16_4_2/: CMakeLists.txt  main.cpp
Task_16_4_3/: CMakeLists.txt  main.cpp
Task_16_4_4/: CMakeLists.txt  main.cpp
Task_16_4_5/: CMakeLists.txt  main.cpp
Task_17_4_1/: CMakeLists.txt  main.cpp
Task_17_4_2/: CMakeLists.txt  main.cpp
Task_17_4_3/: CMakeLists.txt  main.cpp
Task_18_5_1/: CMakeLists.txt  main.cpp
Task_18_5_2/: CMakeLists.txt  main.cpp
Task_18_5_3/: CMakeLists.txt  main.cpp
Task_18_5_4/: CMakeLists.txt  main.cpp
Task_19_5_1/: CMakeLists.txt  ReadMe  main.cpp
Task_19_5_2/: CMakeLists.txt  ReadMe  main.cpp
Task_19_5_3/: CMakeLists.txt  ReadMe  main.cpp
Task_19_5_4/: CMakeLists.txt  ReadMe  main.cpp
Task_19_5_5/: CMakeLists.txt  ReadMe  main.cpp
Task_20_5_1/: CMakeLists.txt  ReadMe  main.cpp
Task_20_5_3/: CMakeLists.txt  ReadMe  main.cpp
Task_20_5_4/: CMakeLists.txt  ReadMe  main.cpp
Task_20_5_5/: CMakeLists.txt  ReadMe  main.cpp
Task_22_1/: CMakeLists.txt  ReadMe  main.cpp
Task_22_2/: CMakeLists.txt  ReadMe  main.cpp
Task_22_3/: CMakeLists.txt  ReadMe  main.cpp
Task_22_4/: CMakeLists.txt  ReadMe  main.cpp
Task_23_1/: CMakeLists.txt  ReadMe  main.cpp
Task_23_2/: CMakeLists.txt  ReadMe  main.cpp
Task_23_3/: CMakeLists.txt  ReadMe  main.cpp
Task_24_1/: CMakeLists.txt  ReadMe  main.cpp
Task_24_2/: CMakeLists.txt  ReadMe  main.cpp
Task_24_3/: CMakeLists.txt  ReadMe  main.cpp
Task_25_1/: CMakeLists.txt  ReadMe  main.cpp
Task_25_1v2/: CMakeLists.txt  main.cpp
Task_25_2/: CMakeLists.txt  ReadMe  main.cpp
Task_25_3/: CMakeLists.txt  ReadMe  main.cpp
Task_26_01/: CMakeLists.txt  ReadMe  action.h  main.cpp
Task_26_02/: CMakeLists.txt  ReadMe  main.cpp
Task_26_02/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
Task_26_02/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Task_26_1/: CMakeLists.txt
Task_26_1/include/: my-math.h
Task_26_1/src/: CMakeLists.txt  main.cpp  my-math.cpp
Task_26_4_1_Audioplayer/: CMakeLists.txt  ReadMe  main.cpp
Task_26_4_2_Mobile/: CMakeLists.txt  ReadMe  main.cpp
Task_26_4_3_Desktop/: CMakeLists.txt  ReadMe  main.cpp
Task_27_4_1_Elf_Village/: CMakeLists.txt  ReadMe  main.cpp
Task_27_4_1_Elf_village_v2/: CMakeLists.txt  main.cpp
Task_27_4_2_Geometric_figures/: CMakeLists.txt  ReadMe  main.cpp
Task_27_4_3_Simulator_Company/: CMakeLists.txt  ReadMe  main.cpp
Task_28_4_1_Swiming_100m/: CMakeLists.txt  ReadMe  main.cpp
Task_28_4_3_Online_restaurant/: CMakeLists.txt  ReadMe  main.cpp
Task_29_4_1_Meeting_v2/: CMakeLists.txt  main.cpp
Task_29_4_Meeting_Animals/: ReadMe  main.cpp
Task_30_4_1_Custom_Requests/: CMakeLists.txt  ReadMe  main.cpp
Task_30_4_2_Grab_header/: CMakeLists.txt  ReadMe  main.cpp
Task_30_4_3_Requests_with_arguments/: CMakeLists.txt  ReadMe  main.cpp
Task_31_5_1_Smart_pointer_for_toy/: CMakeLists.txt  ReadMe  main.cpp
Task_31_5_2_Graph/: CMakeLists.txt  ReadMe  main.cpp
Task_32_5_1_Info_about_film/: CMakeLists.txt  ReadMe  main.cpp
Task_32_5_2_Analysis_info_film/: CMakeLists.txt  ReadMe  main.cpp
Task_32_5_3_Protobuff/: CMakeLists.txt  ReadMe  record.pb.cc  record.pb.h  record.proto
Task_33_5_1_Product_basket/: CMakeLists.txt  ReadMe  main.cpp
Task_33_5_2_Fishing/: CMakeLists.txt  ReadMe  main.cpp
Task_33_5_3_Reestr_data/: CMakeLists.txt  ReadMe  main.cpp
Task_33_5_4_Average/: CMakeLists.txt  ReadMe  main.cpp
Task_35_6_1/: CMakeLists.txt  ReadMe  main.cpp
Task_35_6_2_Lambda/: CMakeLists.txt  ReadMe  main.cpp
Task_35_6_3_FileSystem/: CMakeLists.txt  ReadMe  main.cpp
Task_36_4_Circle_and_slider/: CMakeLists.txt  ReadMe  main.cpp
Task_37_4_1_Calculater/: CMakeLists.txt  Calculate.ui  ReadMe  main.cpp
Task_37_4_2_MediaPlayer/: CMakeLists.txt  ReadMe  main.qml
Task_37_4_3_TV_remote_controller/: CMakeLists.txt  ReadMe  TV_remote.ui  main.cpp  remote_controller.h
Task_38_5_1_Sound_Button/: CMakeLists.txt  ReadME  main.cpp
Task_38_5_2_HTML_redactor/: CMakeLists.txt  ReadMe  main.cpp
Task_38_5_3_Blur_Image/: CMakeLists.txt  ReadMe  main.cpp  mainwindow.ui
Task_39_4_1_Animated_circle_movement/: CMakeLists.txt  main.qml  readme
Task_39_4_2_Mobile_number_matching/: CMakeLists.txt  ReadMe  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Task_37_4_2_MediaPlayer-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Task_37_4_2_MediaPlayer-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
task_28_4_2_Railway_simulator/: CMakeLists.txt  ReadMe  main.cpp
untitled/: CMakeLists.txt  main.cpp
(+15 files in other folders)
